hide the footer initially to avoid flickering during loading the state

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,10 +105,10 @@ header div {
 }
 
 footer {
+  display: none;
   background-color: inherit;
   padding: 1em;
   border-top: solid 2px #566473;
-  display: flex;
   flex-flow: column;
   align-items: center;
   text-align: center;
